--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -164,7 +164,7 @@ specs:
   - polars =1.37.1
   - numpy =2.3.5  # allow_outdated, numba
   - scipy =1.17.0
-  - openblas =0.3.31
+  - openblas =0.3.30  # allow_outdated, needs libblas update
   - libblas =3.11.0=*openblas
   - jupyter =1.1.1
   - notebook =7.5.2
