--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -77,6 +77,7 @@ specs:
   - mne-bids-pipeline =1.9.0
   - mne-qt-browser =0.7.4
   - mne-connectivity =0.7.0=*_1
+  - mne-denoise =0.0.1
   - mne-faster =1.2.2
   - mne-nirs =0.7.3
   - mne-features =0.3.1
