Workaround for wfdb

--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -161,7 +161,7 @@ specs:
   - traitsui =8.0.0
   - pyface =8.0.0
   - imageio-ffmpeg =0.6.0
-  - pandas =3.0.0
+  - pandas =2.3.3  # allow_outdated, wfdb https://github.com/MIT-LCP/wfdb-python/issues/560
   - polars =1.37.1
   - numpy =2.3.5  # allow_outdated, numba
   - scipy =1.17.0
