--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -87,6 +87,7 @@ specs:
   - mne-gui-addons =0.1=*_1
   - mne-lsl =1.12.0
   - mne-kit-gui =1.3.0
+  - mne-videobrowser =0.1.8
   - autoreject =0.4.3
   - antio =0.6.1
   - wfdb =4.3.0
