--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -88,7 +88,7 @@ specs:
   - mne-lsl =1.12.0
   - autoreject =0.4.3
   - antio =0.6.1
-  - wfdb =4.3.0
+  - wfdb =4.3.1
   - meegkit =0.1.9
   - eeg_positions =2.1.2
   - curryreader =0.1.2
@@ -124,7 +124,7 @@ specs:
   - edfio =0.4.12
   - eeglabio =0.1.3
   - mffpy =0.10.0
-  - openmeeg =2.5.15=*_3
+  - openmeeg =2.5.16
   - python-neo =0.14.3
   - nitime =0.12.1
   - snirf =0.8.0
@@ -158,7 +158,7 @@ specs:
   - threadpoolctl =3.6.0
   - scikit-learn =1.8.0
   - imageio-ffmpeg =0.6.0
-  - pandas =2.3.3  # allow_outdated, wfdb https://github.com/MIT-LCP/wfdb-python/issues/560
+  - pandas =2.3.3
   - polars =1.37.1
   - numpy =2.3.5  # allow_outdated, numba
   - scipy =1.17.0
