--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -88,7 +88,7 @@ specs:
   - mne-lsl =1.12.0
   - autoreject =0.4.3
   - antio =0.6.1
-  - wfdb =4.3.0
+  - wfdb =4.3.1
   - meegkit =0.1.9
   - eeg_positions =2.1.2
   - curryreader =0.1.2
@@ -124,7 +124,7 @@ specs:
   - edfio =0.4.12
   - eeglabio =0.1.3
   - mffpy =0.10.0
-  - openmeeg =2.5.15=*_3
+  - openmeeg =2.5.16
   - python-neo =0.14.3
   - nitime =0.12.1
   - snirf =0.8.0
@@ -149,7 +149,7 @@ specs:
   - lazy-loader =0.4
   - packaging =26.0
   - pooch =1.9.0
-  - tqdm =4.67.2
+  - tqdm =4.67.3
   - h5py =3.15.1
   - h5io =0.2.5
   - pymatreader =1.1.0
@@ -158,7 +158,7 @@ specs:
   - threadpoolctl =3.6.0
   - scikit-learn =1.8.0
   - imageio-ffmpeg =0.6.0
-  - pandas =2.3.3  # allow_outdated, wfdb https://github.com/MIT-LCP/wfdb-python/issues/560
+  - pandas =3.0.0
   - polars =1.37.1
   - numpy =2.3.5  # allow_outdated, numba
   - scipy =1.17.0
@@ -236,8 +236,8 @@ specs:
   - pytest-rerunfailures =16.1
   - pytest-timeout =2.4.0
   - pre-commit =4.5.1
-  - ruff =0.14.14
-  - uv =0.9.28
+  - ruff =0.15.0
+  - uv =0.9.29
   - check-manifest =0.51
   - codespell =2.4.1
   - py-spy =0.4.1
@@ -273,7 +273,7 @@ specs:
   - sphinx-copybutton =0.5.2
   - sphinxcontrib-youtube =1.4.1
   - sphinxcontrib-towncrier =0.5.0a0
-  - intersphinx-registry =0.2601.5
+  - intersphinx-registry =0.2602.2
   # OS-specific
   - git =2.52.0  # [win]
   - make =4.4.1  # [win]
