--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -86,6 +86,7 @@ specs:
   - mne-icalabel =0.8.1
   - mne-gui-addons =0.1=*_1
   - mne-lsl =1.12.0
+  - mne-denoise =0.0.1
   - autoreject =0.4.3
   - antio =0.6.1
   - wfdb =4.3.1
