--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -168,7 +168,7 @@ specs:
   - jupyter =1.1.1
   - notebook =7.5.3
   - jupyterlab =4.5.4
-  - ipykernel =6.30.1  # allow_outdated, 7+ incompatible with spyder_kernels
+  - ipykernel =6.31.0  # allow_outdated, 7+ incompatible with spyder_kernels 3.1.3
   - spyder-kernels =3.1.3
   # TODO: Needs to not require pyqt
   # https://github.com/spyder-ide/spyder/issues/20201
@@ -204,7 +204,7 @@ specs:
   - seaborn =0.13.2
   - plotly =6.5.2
   - vtk-base =9.4.2  # allow_outdated, requires Qt 6.9.1+
-  - vtk =9.4.2  # allow_outdated
+  - vtk =9.4.2  # allow_outdated, needs qt6-main bump
   - ipywidgets =8.1.8
   - pyvista =0.47.0
   - pyvistaqt =0.11.3
@@ -267,7 +267,7 @@ specs:
   - graphviz =13.1.2  # allow_outdated, needs qt6-main bump due to pcre2 conflict
   - python-graphviz =0.21
   - selenium =4.38.0  # allow_outdated, needs qt6-main bump
-  - sphinx =8.2.3  # allow_outdated, needs sphinx-design update
+  - sphinx =9.1.0
   - sphinx-design =0.7.0
   - sphinx-gallery =0.20.0
   - sphinxcontrib-bibtex =2.6.5
