--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -122,6 +122,7 @@ specs:
   - pyprep =0.5.0
   - python-picard =0.8.1
   - pybv =0.7.6
+  - pybvrf =0.1.0
   - edfio =0.4.13
   - eeglabio =0.1.3
   - mffpy =0.10.0
