--- a/.github/workflows/outdated.yml
+++ b/.github/workflows/outdated.yml
@@ -13,6 +13,7 @@ on:  # yamllint disable-line rule:truthy
 jobs:
   deps:
     runs-on: ubuntu-22.04
+    timeout-minutes: 15
     steps:
       - uses: actions/checkout@v6
       - uses: actions/setup-python@v6
