--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -122,6 +122,7 @@ specs:
   - pyprep =0.5.0
   - python-picard =0.8.1
   - pybv =0.7.6
+  - pybvrf =0.1.0
   - edfio =0.4.13
   - eeglabio =0.1.3
   - mffpy =0.10.0
@@ -159,7 +160,7 @@ specs:
   - threadpoolctl =3.6.0
   - scikit-learn =1.8.0
   - imageio-ffmpeg =0.6.0
-  - pandas =3.0.0
+  - pandas =3.0.1
   - polars =1.38.1
   - numpy =2.3.5  # allow_outdated, numba
   - scipy =1.17.0
@@ -238,7 +239,7 @@ specs:
   - pytest-timeout =2.4.0
   - pre-commit =4.5.1
   - ruff =0.15.1
-  - uv =0.10.3
+  - uv =0.10.4
   - check-manifest =0.51
   - codespell =2.4.1
   - py-spy =0.4.1
