--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -117,7 +117,7 @@ specs:
   - yasa =0.6.5
   # various biological signals (ECG, EOG, EMG, …)
   - neurokit2 =0.2.10
-  - mnelab =1.2.0
+  - mnelab =1.0.8  # allow_outdated, needs qt6-main bump
   # other
   - pyriemann =0.10
   - pyprep =0.5.0
